# blackrock-news-sentiment

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: finbert_sentiment_analysis.ipynb  gafam_sentiment_vs_return.ipynb
src/: fetch_multiple_news.py  fetch_news.py  finbert_batch_sentiment.py
